--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,8 @@ spring:
     defer-datasource-initialization: true # 추가
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
+    open-in-view: false
     show-sql: true
     properties:
       hibernate:
